--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
-  <html>
-    <head><\head>
-  <\html>
-    
-    wow what a file
+<html>
+  <head>
+    <title>I - PCMasterRays</title>
+  </head>
+  <body>
+    <h1>Welcome to my first website</h1>
+    <h4>Current Version: 10.0</h4>
+  </body>
+</html>
